--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,9 +6,6 @@ on:
     branches:
       - main
 
-env:
-  ASPIRE_VERSION: "8.1.0"
-
 jobs:
   build:
     strategy:
@@ -18,10 +15,21 @@ jobs:
           - windows-2022
         include:
           - platform: ltsc2019
+            aspire_version: "8.1.0"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2019"
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2019
             os: windows-2019
+
           - platform: ltsc2022
+            aspire_version: "8.1.0"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2022"
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2022
+            os: windows-2022
+
+          - platform: ltsc2022
+            aspire_version: "9.0.0-preview.5.24551.3"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:9.0.0-preview.5.24551.3-ltsc2022"
+            parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-windowsservercore-ltsc2022
             os: windows-2022
 
     runs-on: ${{ matrix.os }}
@@ -37,7 +45,7 @@ jobs:
 
       - name: Docker build and push
         run: |
-          $tag = "ghcr.io/pbering/dotnet-aspire-dashboard-windows:$env:ASPIRE_VERSION-${{ matrix.platform }}"
+          $tag = "${{ matrix.tag }}"
 
-          docker build --build-arg ASPIRE_VERSION=$env:ASPIRE_VERSION --build-arg PARENT_IMAGE=${{ matrix.parent_image }} --tag $tag .
+          docker build --build-arg ASPIRE_VERSION=${{ matrix.aspire_version }} --build-arg PARENT_IMAGE=${{ matrix.parent_image }} --tag $tag .
           docker push $tag
