--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,19 +16,19 @@ jobs:
         include:
           - platform: ltsc2019
             aspire_version: "8.1.0"
-            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2019"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2019
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2019
             os: windows-2019
 
           - platform: ltsc2022
             aspire_version: "8.1.0"
-            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2022"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:8.1.0-ltsc2022
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2022
             os: windows-2022
 
           - platform: ltsc2022
             aspire_version: "9.0.0-preview.5.24551.3"
-            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:9.0.0-preview.5.24551.3-ltsc2022"
+            tag: ghcr.io/pbering/dotnet-aspire-dashboard-windows:9.0.0-ltsc2022
             parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-windowsservercore-ltsc2022
             os: windows-2022
 
