--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,6 +41,12 @@ jobs:
             parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-windowsservercore-ltsc2022
             os: windows-2022
 
+          - platform: nanoserver-ltsc2022
+            aspire_version: "9.0.0-preview.5.24551.3"
+            pretty_version: "9.0.0"
+            parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-nanoserver-ltsc2022
+            os: windows-2022
+
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
