--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,36 +16,26 @@ jobs:
         versions:
           - "8.1.0"
           - "9.0.0-preview.5.24551.3"
-        platform:
-          - windowsservercore-ltsc2019
-          - windowsservercore-ltsc2022
-          - nanoserver-ltsc2022
         include:
-          - platform: windowsservercore-ltsc2019
+          - platform: ltsc2019
             aspire_version: "8.1.0"
             pretty_version: "8.1.0"
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2019
             os: windows-2019
 
-          - platform: windowsservercore-ltsc2022
+          - platform: ltsc2022
             aspire_version: "8.1.0"
             pretty_version: "8.1.0"
             parent_image: mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2022
             os: windows-2022
 
-          - platform: windowsservercore-ltsc2019
+          - platform: ltsc2019
             aspire_version: "9.0.0-preview.5.24551.3"
             pretty_version: "9.0.0"
             parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-windowsservercore-ltsc2019
             os: windows-2019
 
-          - platform: windowsservercore-ltsc2022
-            aspire_version: "9.0.0-preview.5.24551.3"
-            pretty_version: "9.0.0"
-            parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-windowsservercore-ltsc2022
-            os: windows-2022
-
-          - platform: nanoserver-ltsc2022
+          - platform: ltsc2022
             aspire_version: "9.0.0-preview.5.24551.3"
             pretty_version: "9.0.0"
             parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-nanoserver-ltsc2022
@@ -67,4 +57,4 @@ jobs:
           $tag = "ghcr.io/pbering/dotnet-aspire-dashboard-windows:${{ matrix.pretty_version }}-${{ matrix.platform }}"
 
           docker build --build-arg ASPIRE_VERSION=${{ matrix.aspire_version }} --build-arg PARENT_IMAGE=${{ matrix.parent_image }} --tag $tag .
-          #docker push $tag
+          docker push $tag
