--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,7 @@ jobs:
         versions:
           - "8.1.0"
           - "9.0.0-preview.5.24551.3"
+          - "9.1.0-preview.1.25121.10"
         include:
           - platform: ltsc2019
             aspire_version: "8.1.0"
@@ -38,6 +39,12 @@ jobs:
           - platform: ltsc2022
             aspire_version: "9.0.0-preview.5.24551.3"
             pretty_version: "9.0.0"
+            parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-nanoserver-ltsc2022
+            os: windows-2022
+
+          - platform: ltsc2022
+            aspire_version: "9.1.0-preview.1.25121.10"
+            pretty_version: "9.1.0"
             parent_image: mcr.microsoft.com/dotnet/aspnet:9.0-nanoserver-ltsc2022
             os: windows-2022
 
