--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,12 +31,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # - name: Docker login
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker build and push
         run: |
