--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,7 @@ jobs:
         version:
           - "9.5.0-preview.1.25474.7"
           - "13.0.0-preview.1.25560.3"
+          - "13.1.0-preview.1.25616.3"
         include:
           - platform: ltsc2022
             parent_image: mcr.microsoft.com/dotnet/aspnet:10.0-nanoserver-ltsc2022
